# sandcat

./: .editorconfig  .gitpod.yml  Makefile  README.md  category.py  pyproject.toml  sandcat.py  sandcat_sympy.py  sandcat_z3.py  test.py
sandcat/: category.py  formula.py  haori.rb  parser.py
typings/: sympy.pyi
