[project]
name = "sandcat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13.2",
    "z3-solver>=4.13.0.0",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
[tool.basedpyright]
venvPath = "./"
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
